Added evil open files listener, to garbage collect if many files are opened

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/web.xml
@@ -303,6 +303,11 @@
     </listener>
 
     <listener>
+        <description>Forces a garbage collection if more than 1000 open files are found</description>
+        <listener-class>uk.ac.ebi.faces.webapp.EvilOpenFilesListener</listener-class>
+    </listener>
+
+    <listener>
         <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
     </listener>
 
