--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab-converters/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab-converters/pom.xml
@@ -17,6 +17,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
+            <artifactId>intact-psimitab</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>psidev.psi.mi</groupId>
             <artifactId>psimitab</artifactId>
             <version>1.5.0-SNAPSHOT</version>
