Migrating the editor guts to use the Core Persisters

--- a/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
@@ -3,6 +3,7 @@ log4j.rootCategory=DEBUG, A
 log4j.category.uk.ac.ebi.intact=INFO
 
 log4j.category.uk.ac.ebi.intact.application.editor=DEBUG
+log4j.category.uk.ac.ebi.intact.application.editor.hibernate=INFO
 log4j.category.uk.ac.ebi.intact.application.editor.security=INFO
 
 # core
