--- a/repo/service/trunk/editor/editor-app/src/main/webapp/WEB-INF/web.xml
+++ b/repo/service/trunk/editor/editor-app/src/main/webapp/WEB-INF/web.xml
@@ -78,7 +78,7 @@
     <!-- Filter to open the session at the beginning of the request and close on end -->
     <filter>
         <filter-name>intactFilter</filter-name>
-        <filter-class>uk.ac.ebi.intact.webapp.IntactSessionRequestFilter</filter-class>
+        <filter-class>uk.ac.ebi.intact.webapp.JpaIntactSessionRequestFilter</filter-class>
 
         <init-param>
             <param-name>uk.ac.ebi.intact.filter.EXCLUDED_EXTENSIONS</param-name>
@@ -142,6 +142,15 @@
 
 
     </servlet>
+
+    <!-- =================================================================== -->
+    <!-- Listeners -->
+    <listener>
+        <listener-class>uk.ac.ebi.intact.webapp.BasicStartupIntactListener</listener-class>
+    </listener>
+    <listener>
+        <listener-class>uk.ac.ebi.intact.application.editor.hibernate.ConnectionSessionListener</listener-class>
+    </listener>
 
     <!-- =================================================================== -->
 
