--- a/repo/service/trunk/editor/editor-app/src/test/resources/log4j.properties
+++ b/repo/service/trunk/editor/editor-app/src/test/resources/log4j.properties
@@ -2,9 +2,11 @@
 log4j.rootCategory=DEBUG, A
 
 #editor
+log4j.category.uk.ac.ebi.intact.editor.hibernate.EditorConnectionProvider=DEBUG
 
 # core
 log4j.category.uk.ac.ebi.intact=DEBUG
+log4j.category.uk.ac.ebi.intact.webapp=DEBUG
 log4j.category.uk.ac.ebi.intact.persistence.util=INFO
 
 # other
@@ -36,7 +38,7 @@ log4j.category.org.hibernate.cache=DEBUG
 #Log transaction related activity
 log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
-log4j.category.org.hibernate.jdbc=INFO
+log4j.category.org.hibernate.jdbc=DEBUG
 #Log HQL and SQL ASTs during query parsing
 log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
