--- a/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
@@ -4,6 +4,7 @@ log4j.category.uk.ac.ebi.intact=INFO
 
 log4j.category.uk.ac.ebi.intact.application.editor=DEBUG
 log4j.category.uk.ac.ebi.intact.application.editor.hibernate=INFO
+log4j.category.uk.ac.ebi.intact.application.editor.hibernate.ConnectionManager=DEBUG
 log4j.category.uk.ac.ebi.intact.application.editor.security=INFO
 
 # core
