--- a/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
@@ -6,6 +6,7 @@ log4j.category.uk.ac.ebi.intact.application.editor=DEBUG
 log4j.category.uk.ac.ebi.intact.application.editor.hibernate=INFO
 log4j.category.uk.ac.ebi.intact.application.editor.hibernate.ConnectionManager=DEBUG
 log4j.category.uk.ac.ebi.intact.application.editor.security=INFO
+log4j.category.uk.ac.ebi.intact.application.editor.struts.framework.util.EditorMenuFactory=INFO
 
 # core
 log4j.category.uk.ac.ebi.intact.persistence.util=INFO
