--- a/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/editor/editor-app/src/main/resources/log4j.properties
@@ -25,6 +25,7 @@ log4j.category.org.apache=INFO
 
 log4j.category.org.hibernate=ERROR
 
+log4j.category.org.hibernate.LazyInitializationException=FATAL
 log4j.category.org.hibernate.cfg=WARN
 
 log4j.category.org.hibernate.impl=INFO
