--- a/repo/service/tags/editor-1.7.0-beta-1/editor-app/pom.xml
+++ b/repo/service/tags/editor-1.7.0-beta-1/editor-app/pom.xml
@@ -73,6 +73,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
+            <version>1.7.1</version>
         </dependency>
 
          <dependency>
