--- a/repo/service/tags/editor-1.7.0-beta-1/editor-app/src/main/resources/log4j.properties
+++ b/repo/service/tags/editor-1.7.0-beta-1/editor-app/src/main/resources/log4j.properties
@@ -3,12 +3,20 @@ log4j.rootCategory=DEBUG, A
 log4j.category.uk.ac.ebi.intact=INFO
 
 log4j.category.uk.ac.ebi.intact.application.editor=DEBUG
+log4j.category.uk.ac.ebi.intact.application.editor.security=INFO
 
+# core
 log4j.category.uk.ac.ebi.intact.persistence.util=INFO
 log4j.category.uk.ac.ebi.intact.persistence.dao.IntactTransaction=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=INFO
 log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=INFO
+log4j.category.uk.ac.ebi.intact.webapp=DEBUG
+
+# other
+
+# so the Wire class doesn't fill up the logs
+log4j.category.httpclient=WARN
 
 log4j.category.org.apache=INFO
 
