--- a/repo/unit-datasets/trunk/dataset-import-maven-plugin/pom.xml
+++ b/repo/unit-datasets/trunk/dataset-import-maven-plugin/pom.xml
@@ -4,14 +4,14 @@
     <parent>
         <groupId>uk.ac.ebi.intact.datasets</groupId>
         <artifactId>unitdatasets-master</artifactId>
-        <version>1.7.0</version>
+        <version>1.8.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dataset-import-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.7.0</version>
+    <version>1.8.0</version>
 
     <name>IntAct Unit Datasets :: Maven Plugin :: Dataset Importer</name>
     <description>Imports datasets into a database</description>
@@ -22,9 +22,9 @@
             <artifactId>intact-plugin</artifactId>
         </dependency>
         <dependency>
-            <groupId>uk.ac.ebi.intact</groupId>
+            <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
-            <version>1.7.0</version>
+            <version>1.8.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.commons</groupId>
