--- a/repo/unit-datasets/trunk/dbunit-dataset-maven-plugin/src/test/resources/log4j.properties
+++ b/repo/unit-datasets/trunk/dbunit-dataset-maven-plugin/src/test/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=DEBUG, A
+log4j.rootCategory=INFO, A
 
 # intact-core
 log4j.category.uk.ac.ebi.intact=DEBUG
@@ -40,7 +40,7 @@ log4j.category.org.hibernate.SQL=INFO
 #Log all JDBC parameters
 log4j.category.org.hibernate.type=INFO
 #Log all SQL DDL statements as they are executed
-log4j.category.org.hibernate.tool.hbm2ddl=INFO
+log4j.category.org.hibernate.tool.hbm2ddl=WARN
 #Log the state of all entities (max 20 entities) associated with the session at flush time
 log4j.category.org.hibernate.pretty=DEBUG
 #Log all second-level cache activity
@@ -50,7 +50,7 @@ log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
