--- a/repo/unit-datasets/trunk/pom.xml
+++ b/repo/unit-datasets/trunk/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.maven</groupId>
         <artifactId>intact-hibernate-master</artifactId>
-        <version>13</version>
+        <version>20</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -12,7 +12,7 @@
     <groupId>uk.ac.ebi.intact.datasets</groupId>
     <artifactId>unitdatasets-master</artifactId>
     <packaging>pom</packaging>
-    <version>1.7.0</version>
+    <version>1.8.0</version>
 
     <name>IntAct Unit Datasets</name>
     <description>IntAct Unit Datasets Master POM</description>
@@ -99,12 +99,25 @@
                 <version>2.2</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.dbunit</groupId>
+                <artifactId>dbunit</artifactId>
+                <version>2.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>uk.ac.ebi.intact.core</groupId>
+                <artifactId>intact-core</artifactId>
+                <version>1.8.0-SNAPSHOT</version>
+            </dependency>
+
+
             <!-- plugins -->
 
             <dependency>
                 <groupId>uk.ac.ebi.intact.plugins</groupId>
                 <artifactId>intact-plugin</artifactId>
-                <version>2.0</version>
+                <version>2.1-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.maven.shared</groupId>
