--- a/repo/data-exchange/trunk/psimi/psimitab/intact-interolog-prediction/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-interolog-prediction/pom.xml
@@ -72,4 +72,17 @@
         </repository>
     </repositories>
 
+  <build>       <plugins>
+         
+         <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+               <descriptorRefs>
+                  <descriptorRef>jar-with-dependencies</descriptorRef>
+               </descriptorRefs>
+            </configuration> 
+         </plugin>
+		      </plugins>   </build>
+
+
 </project>
