Removed dependencies to intact-persister, now merged with intact-core - well... rewritten and incorporated a few classes to intact-core

--- a/repo/data-exchange/trunk/ebeye/pom.xml
+++ b/repo/data-exchange/trunk/ebeye/pom.xml
@@ -17,7 +17,7 @@
     <description>EB-eye Master POM</description>
 
     <modules>
-        <!--<module>intact-uniprot-export</module>-->
+        <module>intact-ebi-search-engine-export</module>
     </modules>
 
 </project>
