--- a/repo/data-exchange/trunk/imex/intact-imex-import/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/imex/intact-imex-import/src/test/resources/log4j.properties
@@ -10,7 +10,8 @@ log4j.category.uk.ac.ebi.intact.annotation=INFO
 
 log4j.category.uk.ac.ebi.intact.core.persister=INFO
 
-# data-exchange
+# bridges
+log4j.category.uk.ac.ebi.intact.uniprot=INFO;
 
 # other intact
 log4j.category.psidev.psi.mi=WARN
@@ -22,8 +23,9 @@ log4j.category.org.springframework=INFO
 
 log4j.category.net.sf.ehcache=INFO
 
+log4j.category.httpclient=INFO
+
 log4j.category.org.apache=INFO
-log4j.category.org.apache.commons.httpclient=WARN
 
 log4j.category.org.hibernate=ERROR
 log4j.category.org.hibernate.cfg=WARN
@@ -40,6 +42,8 @@ log4j.category.org.hibernate.event=INFO
 log4j.category.org.hibernate.SQL=INFO
 #Log all JDBC parameters
 log4j.category.org.hibernate.type=INFO
+# AST
+org.hibernate.hql.ast.AST=INFO
 #Log all SQL DDL statements as they are executed
 log4j.category.org.hibernate.tool.hbm2ddl=INFO
 #Log the state of all entities (max 20 entities) associated with the session at flush time
@@ -51,7 +55,7 @@ log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
