--- a/repo/data-exchange/trunk/imex/intact-imex-repository/pom.xml
+++ b/repo/data-exchange/trunk/imex/intact-imex-repository/pom.xml
@@ -22,29 +22,18 @@
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
-            <artifactId>intact-psixml-enricher</artifactId>
+            <artifactId>intact-psixml-exchange</artifactId>
         </dependency>
 
         <dependency>
             <groupId>uk.ac.ebi.intact.bridges.coredep</groupId>
             <artifactId>intact-cdb</artifactId>
-            <version>2.0-beta-9-SNAPSHOT</version>
+            <version>2.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>uk.ac.ebi.intact.tools</groupId>
             <artifactId>intact-psi-validator</artifactId>
-            <version>1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>1.5</version>
-        </dependency>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time-hibernate</artifactId>
             <version>1.0</version>
         </dependency>
 
