--- a/repo/data-exchange/trunk/pom.xml
+++ b/repo/data-exchange/trunk/pom.xml
@@ -20,7 +20,7 @@
 
     <properties>
         <currentVersion>${version}</currentVersion>
-        <version.core>1.7.2-SNAPSHOT</version.core>
+        <version.core>1.8.0-SNAPSHOT</version.core>
     </properties>
 
     <scm>
@@ -38,7 +38,7 @@
         <module>imex</module>
         <module>plugins</module>
         <module>uniprot-export</module>
-        <module>eb-eye</module>
+        <module>ebeye</module>
   </modules>
 
     <build>
@@ -62,11 +62,6 @@
             <dependency>
                 <groupId>uk.ac.ebi.intact.core</groupId>
                 <artifactId>intact-annotations</artifactId>
-                <version>${version.core}</version>
-            </dependency>
-            <dependency>
-                <groupId>uk.ac.ebi.intact.core</groupId>
-                <artifactId>intact-persister</artifactId>
                 <version>${version.core}</version>
             </dependency>
             <dependency>
