--- a/repo/data-exchange/trunk/psimi/legacy/data-conversion/pom.xml
+++ b/repo/data-exchange/trunk/psimi/legacy/data-conversion/pom.xml
@@ -31,6 +31,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
+            <version>1.7.1</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.service.commons</groupId>
