Using latest intact-core 1.8.0-SNAPSHOT

--- a/repo/data-exchange/trunk/psimi/psixml/intact-psixml-exchange/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/psimi/psixml/intact-psixml-exchange/src/test/resources/log4j.properties
@@ -2,8 +2,10 @@ log4j.rootCategory=INFO, A
 
 # intact-core
 log4j.category.uk.ac.ebi.intact=DEBUG
+log4j.category.uk.ac.ebi.intact.model.util.XrefUtils=ERROR
 log4j.category.uk.ac.ebi.intact.persistence.util=INFO
 log4j.category.uk.ac.ebi.intact.persistence.dao=INFO
+
 
 log4j.category.uk.ac.ebi.intact.model=INFO
 log4j.category.uk.ac.ebi.intact.config=INFO
