--- a/repo/data-exchange/trunk/psimi/psixml/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psixml/pom.xml
@@ -27,7 +27,7 @@
             <dependency>
                 <groupId>psidev.psi.mi</groupId>
                 <artifactId>psi25-xml</artifactId>
-                <version>1.0-rc1</version>
+                <version>1.5.0-SNAPSHOT</version>
             </dependency>
 
             <dependency>
