--- a/repo/service/trunk/statistics/statistic-view/src/main/resources/log4j.properties
+++ b/repo/service/trunk/statistics/statistic-view/src/main/resources/log4j.properties
@@ -1,10 +1,10 @@
 
 log4j.rootCategory=INFO, A
 
-log4j.category.uk.ac.ebi.intact=DEBUG
+log4j.category.uk.ac.ebi.intact.application.statisticView=INFO
+
+log4j.category.uk.ac.ebi.intact=INFO
 log4j.category.uk.ac.ebi.intact.persistence.util=INFO
-log4j.category.uk.ac.ebi.intact.persistence.dao.IntactTransaction=INFO
-log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=DEBUG
 
 log4j.category.org.apache=INFO
@@ -37,7 +37,7 @@ log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
