--- a/repo/service/trunk/pom.xml
+++ b/repo/service/trunk/pom.xml
@@ -25,7 +25,7 @@
 
         <user>${env.USERNAME}</user>
 
-        <core.version>1.7.2-SNAPSHOT</core.version>
+        <core.version>1.8.0-SNAPSHOT</core.version>
     </properties>
 
     <modules>
@@ -248,7 +248,12 @@
             <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
-                <version>1.2.13</version>
+                <version>1.2.15</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-logging</groupId>
+                <artifactId>commons-logging</artifactId>
+                <version>1.1.1</version>
             </dependency>
             <dependency>
                 <groupId>commons-collections</groupId>
