--- a/repo/data-exchange/trunk/psimi/psixml/intact-psixml-exchange/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/psimi/psixml/intact-psixml-exchange/src/test/resources/log4j.properties
@@ -12,7 +12,7 @@ log4j.category.uk.ac.ebi.intact.config=INFO
 log4j.category.uk.ac.ebi.intact.context=INFO
 log4j.category.uk.ac.ebi.intact.annotation=INFO
 
-log4j.category.uk.ac.ebi.intact.core.persister=INFO
+log4j.category.uk.ac.ebi.intact.core.persister=DEBUG
 
 # data exchange
 log4j.category.uk.ac.ebi.intact.dataexchange=DEBUG
