--- a/repo/service/trunk/hierarch-view/intact-graph/pom.xml
+++ b/repo/service/trunk/hierarch-view/intact-graph/pom.xml
@@ -46,6 +46,12 @@
         </dependency>
 
         <dependency>
+            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
+            <artifactId>intact-psimitab</artifactId>
+            <version>2.0.0-Snapshot</version>
+        </dependency>
+
+        <dependency>
             <groupId>psidev.psi.mi</groupId>
             <artifactId>psimitab</artifactId>
             <version>1.5.0-SNAPSHOT</version>
