--- a/repo/data-exchange/trunk/psimi/psixml/intact-psixml-exchange/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psixml/intact-psixml-exchange/pom.xml
@@ -29,15 +29,22 @@
     <dependencies>
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
-            <artifactId>intact-psixml-upload-extensions</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psixml-converters</artifactId>
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psixml-enricher</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.1</version>
         </dependency>
 
     </dependencies>
