--- a/repo/data-exchange/trunk/intact-cvutils/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/intact-cvutils/src/test/resources/log4j.properties
@@ -38,7 +38,7 @@ log4j.category.org.hibernate.SQL=INFO
 #Log all JDBC parameters
 log4j.category.org.hibernate.type=INFO
 #Log all SQL DDL statements as they are executed
-log4j.category.org.hibernate.tool.hbm2ddl=INFO
+log4j.category.org.hibernate.tool.hbm2ddl=WARN
 #Log the state of all entities (max 20 entities) associated with the session at flush time
 log4j.category.org.hibernate.pretty=DEBUG
 #Log all second-level cache activity
@@ -48,7 +48,7 @@ log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
