--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/log4j.properties
@@ -1,6 +1,8 @@
 log4j.rootCategory=WARN, A
 
 log4j.category.uk.ac.ebi.intact.application.hierarchview=WARN
+log4j.category.uk.ac.ebi.intact.application.hierarchview.business.data=INFO
+log4j.category.uk.ac.ebi.intact.application.hierarchview.struts.framework=INFO
 
 # intact-core
 log4j.category.uk.ac.ebi.intact=WARN
