--- a/repo/data-exchange/trunk/intact-cvutils/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/intact-cvutils/src/test/resources/log4j.properties
@@ -6,6 +6,7 @@ log4j.category.uk.ac.ebi.intact.dataexchange.cvutils=TRACE
 log4j.category.uk.ac.ebi.intact=DEBUG
 log4j.category.uk.ac.ebi.intact.persistence=INFO
 log4j.category.uk.ac.ebi.intact.model=INFO
+log4j.category.uk.ac.ebi.intact.model.util.XrefUtils=ERROR
 log4j.category.uk.ac.ebi.intact.config=INFO
 log4j.category.uk.ac.ebi.intact.context=INFO
 log4j.category.uk.ac.ebi.intact.annotation=INFO
