--- a/repo/site/trunk/intact-kickstart/src/main/resources/log4j.properties
+++ b/repo/site/trunk/intact-kickstart/src/main/resources/log4j.properties
@@ -4,6 +4,7 @@ log4j.rootCategory=INFO, A
 log4j.category.uk.ac.ebi.intact=INFO
 log4j.category.uk.ac.ebi.intact.persistence=INFO
 log4j.category.uk.ac.ebi.intact.model=INFO
+log4j.category.uk.ac.ebi.intact.model.util.XrefUtils=ERROR
 log4j.category.uk.ac.ebi.intact.config=INFO
 log4j.category.uk.ac.ebi.intact.context=INFO
 log4j.category.uk.ac.ebi.intact.annotation=INFO
@@ -38,7 +39,7 @@ log4j.category.org.hibernate.SQL=INFO
 #Log all JDBC parameters
 log4j.category.org.hibernate.type=INFO
 #Log all SQL DDL statements as they are executed
-log4j.category.org.hibernate.tool.hbm2ddl=INFO
+log4j.category.org.hibernate.tool.hbm2ddl=WARN
 #Log the state of all entities (max 20 entities) associated with the session at flush time
 log4j.category.org.hibernate.pretty=DEBUG
 #Log all second-level cache activity
@@ -53,7 +54,7 @@ log4j.category.org.hibernate.hql.ast.AST=INFO
 log4j.category.org.hibernate.secure=INFO
 
 #c3p0
-log4j.category.com.mchange.v2=DEBUG
+log4j.category.com.mchange.v2=WARN
 
 # ***** A is set to be a ConsoleAppender.
 log4j.appender.A=org.apache.log4j.ConsoleAppender
