--- a/repo/site/trunk/intact-kickstart/pom.xml
+++ b/repo/site/trunk/intact-kickstart/pom.xml
@@ -65,6 +65,12 @@
             <!--<version>1.0.20070617</version>-->
         <!--</dependency>-->
 
+        <!-- Other -->
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2</version>
+        </dependency>
 
     </dependencies>
 
