--- a/repo/data-exchange/trunk/intact-cvutils/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/intact-cvutils/src/test/resources/log4j.properties
@@ -1,6 +1,7 @@
 log4j.rootCategory=INFO, A
 
-log4j.category.uk.ac.ebi.intact.dataexchange.cvutils=TRACE
+log4j.category.uk.ac.ebi.intact.dataexchange.cvutils=INFO
+log4j.category.uk.ac.ebi.intact.dataexchange.cvutils.PSILoader=INFO
 
 # intact-core
 log4j.category.uk.ac.ebi.intact=DEBUG
