--- a/repo/data-exchange/trunk/imex/intact-imex-repository/pom.xml
+++ b/repo/data-exchange/trunk/imex/intact-imex-repository/pom.xml
@@ -25,11 +25,11 @@
             <artifactId>intact-psixml-exchange</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>uk.ac.ebi.intact.bridges.coredep</groupId>
-            <artifactId>intact-cdb</artifactId>
-            <version>2.0.1-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>uk.ac.ebi.intact.bridges.coredep</groupId>-->
+            <!--<artifactId>intact-cdb</artifactId>-->
+            <!--<version>2.0.1-SNAPSHOT</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>uk.ac.ebi.intact.tools</groupId>
@@ -56,18 +56,9 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring</artifactId>
-            <version>2.0.6</version>
+            <version>2.5</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aspects</artifactId>
-            <version>2.0.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-mock</artifactId>
-            <version>2.0.6</version>
-        </dependency>
+        
         <dependency>
             <groupId>concurrent</groupId>
             <artifactId>concurrent</artifactId>
