[IAV-7] Create a Strategy for NodeLabel

--- a/repo/service/trunk/hierarch-view/intact-graph/src/test/resources/log4j.properties
+++ b/repo/service/trunk/hierarch-view/intact-graph/src/test/resources/log4j.properties
@@ -8,6 +8,7 @@ log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=DEBUG
 log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=DEBUG
 log4j.category.uk.ac.ebi.intact.context.impl.WebappSession=INFO
+log4j.category.psidev.psi.mi.tab=INFO
 
 log4j.category.org.apache=INFO
 
