--- a/repo/service/trunk/hierarch-view/intact-graph/pom.xml
+++ b/repo/service/trunk/hierarch-view/intact-graph/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.dataexchange.psimi</groupId>
             <artifactId>intact-psimitab</artifactId>
-            <version>2.0.0-Snapshot</version>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
