--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
@@ -11,4 +11,4 @@ search.parameter.class.value=
 # or "database" to get data from Database
 #( for test until BinaryWebservice give us all information you also can
 # choose "mock" but only for 'brca2' )
-search.source.name=database
+search.source.name=local
