--- a/repo/dbupdate/trunk/intact-biosource-update/pom.xml
+++ b/repo/dbupdate/trunk/intact-biosource-update/pom.xml
@@ -31,9 +31,10 @@
 
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>2.0.5</version>
+            <artifactId>spring</artifactId>
+            <version>2.5</version>
         </dependency>
+
     </dependencies>
 
     <!-- EBI repositories -->
