--- a/repo/dbupdate/trunk/pom.xml
+++ b/repo/dbupdate/trunk/pom.xml
@@ -19,8 +19,8 @@
 
     <properties>
         <currentVersion>${version}</currentVersion>
-        <bridges.version>2.0</bridges.version>
-        <core.version>1.7.2-SNAPSHOT</core.version>
+        <bridges.version>2.0.1-SNAPSHOT</bridges.version>
+        <core.version>1.8.0-SNAPSHOT</core.version>
     </properties>
 
     <scm>
@@ -53,11 +53,7 @@
                 <artifactId>intact-core</artifactId>
                 <version>${core.version}</version>
             </dependency>
-            <dependency>
-                <groupId>uk.ac.ebi.intact.core</groupId>
-                <artifactId>intact-persister</artifactId>
-                <version>${core.version}</version>
-            </dependency>
+
             <dependency>
                 <groupId>uk.ac.ebi.intact.plugins</groupId>
                 <artifactId>intact-plugin</artifactId>
