--- a/repo/service/trunk/commons/confidence-score/pom.xml
+++ b/repo/service/trunk/commons/confidence-score/pom.xml
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
-            <version>1.7.1</version>
+            <version>1.8.0-SNAPSHOT</version>          <!--1.7.1 -->
         </dependency>
 
         <!-- for xml parser -->
