--- a/repo/bridges/trunk/coredep/intact-cdb/src/test/resources/log4j.properties
+++ b/repo/bridges/trunk/coredep/intact-cdb/src/test/resources/log4j.properties
@@ -5,9 +5,14 @@ log4j.category.uk.ac.ebi.intact=DEBUG
 log4j.category.uk.ac.ebi.intact.persistence.util=DEBUG
 log4j.category.uk.ac.ebi.intact.persistence.dao.IntactTransaction=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
-log4j.category.uk.ac.ebi.intact.model.IntactObjectEventListener=DEBUG
+log4j.category.uk.ac.ebi.intact.model.event=INFO
+log4j.category.uk.ac.ebi.intact.model.clone=INFO
 log4j.category.uk.ac.ebi.intact.config.impl.AbstractHibernateDataConfig=DEBUG
 log4j.category.uk.ac.ebi.intact.context.impl.WebappSession=INFO
+
+log4j.category.uk.ac.ebi.intact.core.persister=INFO
+
+
 
 log4j.category.org.apache=INFO
 
