--- a/repo/dbupdate/trunk/intact-biosource-update/src/test/resources/log4j.properties
+++ b/repo/dbupdate/trunk/intact-biosource-update/src/test/resources/log4j.properties
@@ -39,11 +39,11 @@ log4j.category.org.hibernate.pretty=DEBUG
 #Log all second-level cache activity
 log4j.category.org.hibernate.cache=DEBUG
 #Log transaction related activity
-log4j.category.org.hibernate.transaction=INFOS
+log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
