--- a/repo/bridges/trunk/intact-taxonomy/pom.xml
+++ b/repo/bridges/trunk/intact-taxonomy/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -11,8 +13,8 @@
     <artifactId>intact-taxonomy</artifactId>
     <packaging>jar</packaging>
     <version>2.0.1-SNAPSHOT</version>
-    <name>IntAct Bridges :: Taxonomy</name>
 
+    <name>IntAct Bridges :: Taxonomy</name>
 
     <dependencies>
         <dependency>
@@ -23,7 +25,6 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
         </dependency>
-
     </dependencies>
 
 </project>
