--- a/repo/maven/trunk/master-hibernate-pom/pom.xml
+++ b/repo/maven/trunk/master-hibernate-pom/pom.xml
@@ -229,6 +229,12 @@
             <version>3.0.0.ga</version>
         </dependency>
         <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.0.20070429</version>
