--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>psimitab-search</artifactId>
             <version>1.5.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.intact.util</groupId>
+            <artifactId>intact-ols</artifactId>
+            <version>2.0-beta-9-SNAPSHOT</version>
+        </dependency>        
 
         <!-- Third party -->
         <dependency>
