[IAV-14] Include new Tabs into HierarchView

--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Graph.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Graph.properties
@@ -6,12 +6,12 @@
 
 
 # Details about the depth parameter
-hierarchView.graph.depth.default=1
-hierarchView.graph.depth.minimum=1
-hierarchView.graph.depth.maximum=2
+#hierarchView.graph.depth.default=1
+#hierarchView.graph.depth.minimum=1
+#hierarchView.graph.depth.maximum=2
 
 # Maximum of central proteins in the interaction network.
-hierarchView.graph.max.cental.protein=10
+hierarchView.graph.max.protein=500
 
 # determines the way of building the network
 # if value is 'mine' -> use the mine table to build the network (static data, needs preprocessing)
