--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Highlighting.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Highlighting.properties
@@ -11,29 +11,41 @@
 #
 # For each source you want to add, you need to give 2 properties :
 #
-#  (1)   highlightment.source.[NAME OF YOUR SOURCE].class = [CLASS NAME OF YOUR IMPLEMENTATION]
-#  (2)   highlightment.source.[NAME OF YOUR SOURCE].label = [LABEL YOU WANT TO SEE APPEAR IN THE WEB INTERFACE]
+#  (1)   highlightment.source.node.[NAME OF YOUR SOURCE].class = [CLASS NAME OF YOUR IMPLEMENTATION]
+#  (2)   highlightment.source.node.[NAME OF YOUR SOURCE].label = [LABEL YOU WANT TO SEE APPEAR IN THE WEB INTERFACE]
 #
-# Then you have to add the behaviour name (i.e. [NAME OF YOUR SOURCE]) in the 'highlightment.source.allowed' property.
-
-
-# ALL
-highlightment.source.All.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.AllHighlightmentSource
-highlightment.source.All.label=All
-highlightment.source.All.applicationPath=http://www.ebi.ac.uk
+# Then you have to add the behaviour name (i.e. [NAME OF YOUR SOURCE]) in the 'highlightment.source.node.allowed' property.
 
 # GO
-highlightment.source.GO.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.GoHighlightmentSource
-highlightment.source.GO.label=GO
+highlightment.source.node.GO.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.node.GoHighlightmentSource
+highlightment.source.node.GO.label=GO
 # The Quick GO web application hostname (without / at the end)
-highlightment.source.GO.applicationPath=http://www.ebi.ac.uk/ego
+highlightment.source.node.GO.applicationPath=http://www.ebi.ac.uk/ego
 
 # INTERPRO
-highlightment.source.Interpro.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.InterproHighlightmentSource
-highlightment.source.Interpro.label=Interpro
+highlightment.source.node.Interpro.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.node.InterproHighlightmentSource
+highlightment.source.node.Interpro.label=Interpro
 # The Interpro web search application hostname
-highlightment.source.Interpro.applicationPath=http://www.ebi.ac.uk/interpro
+highlightment.source.node.Interpro.applicationPath=http://www.ebi.ac.uk/interpro
 
+# Molecule Type
+highlightment.source.node.MoleculeType.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.node.MoleculeTypeHighlightmentSource
+highlightment.source.node.MoleculeType.label=MoleculeType
+highlightment.source.node.MoleculeType.applicationPath=http://www.ebi.ac.uk/ontology-lookup/
+
+#ExperimentalRole
+highlightment.source.node.Role.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.node.RoleHighlightmentSource
+highlightment.source.node.Role.label=Role
+highlightment.source.node.Role.applicationPath=http://www.ebi.ac.uk/ontology-lookup/
+
+# Confidence
+highlightment.source.edge.Confidence.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.edge.ConfidenceHighlightmentSource
+highlightment.source.edge.Confidence.label=Confidence
+
+#First Author
+highlightment.source.edge.PMID.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.edge.PMIDHighlightmentSource
+highlightment.source.edge.PMID.label=PMID
+highlightment.source.edge.PMID.applicationPath=http://www.ebi.ac.uk/citexplore/
 
 
 
@@ -42,11 +54,12 @@ highlightment.source.Interpro.applicationPath=http://www.ebi.ac.uk/interpro
 # You can specify what source are reachable via the web interface
 #   'highlightment.source.token' allows to specify the source separator
 #   'highlightment.source.allowed' list of sources (i.e. [NAME OF YOUR SOURCE]) separate by the specified token
-#   'highlightment.source.allowed' MUST have 'All' in first place
 
-highlightment.source.token=,
-# highlightment.source.allowed=GO
-highlightment.source.allowed=All,GO,Interpro
+highlightment.source.node.token=,
+highlightment.source.node.allowed=GO,Interpro,Role,MoleculeType
+
+highlightment.source.edge.token=,
+highlightment.source.edge.allowed=Confidence,PMID
 
 
 
@@ -86,4 +99,7 @@ highlightment.behaviour.Visible.label=Visible
 
 highlightment.behaviour.GO.allowed=Color,Visible
 highlightment.behaviour.Interpro.allowed=Color,Visible
-highlightment.behaviour.All.allowed=Color,Visible
+highlightment.behaviour.Role.allowed=Color,Visible
+highlightment.behaviour.MoleculeType.allowed=Color,Visible
+highlightment.behaviour.Confidence.allowed=Color,Visible
+highlightment.behaviour.PMID.allowed=Color,Visible
