--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
@@ -1,4 +1,5 @@
-search.url=/intact/search/do/hvWelcome
+#search.url=/intact/search/do/hvWelcome
+search.url=http://www.ebi.ac.uk/intact/search/do/search
 
 # This might be used only if search is running on an other server.
 #search.url=http://[SEARCH_HOSTNAME]/intact/search/do/hvWelcome
@@ -7,8 +8,8 @@ search.parameter.query.name=searchString
 search.parameter.class.name=searchClass
 search.parameter.class.value=
 
-# Here you can choose "webservice" to get data from BinaryWebservice
-# or "database" to get data from Database
-#( for test until BinaryWebservice give us all information you also can
-# choose "mock" but only for 'brca2' )
-search.source.name=local
+# Here you can choose
+# "webservice" to get data from BinaryWebService,
+# "database" to get data from DatabaseService
+# "local" to get data from LocalIndexDataService
+search.source.name=webservice
