--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Struts.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Struts.properties
@@ -23,12 +23,12 @@ sidebar.graph.button.contract=Contract
 sidebar.graph.button.contract.title=Contract the interaction network
 
 # Click behaviour
-sidebar.click.section.title=Clicking on a node of the graph will :
-sidebar.click.center.title=center the view
-sidebar.click.add.title=add a network
+sidebar.click.section.title=Click on a molecule to:
+sidebar.click.center.title=Focus the netwok
+sidebar.click.add.title=Expand the network
 
 # PSI download
-sidebar.psi.section.title=PSI-XML
+sidebar.psi.section.title=PSI-MI Download
 sidebar.psi.button.submit=Download
 sidebar.psi.button.submit.title=Download that interaction network in PSI-XML format
 
@@ -60,6 +60,7 @@ error.interactionNetwork.notCreated=Unable to create the interaction network: {0
 error.interactionNetwork.noProteinFound=The retreived interaction network is empty (no protein)
 error.tulip.processing=An error occurred while trying to calculate coordinates: <br>{0}
 error.ImageBean.build=Unable to create the interaction network picture
+error.max.interactions.reached=More than {0} Interactions found.
 
 # Used by : CenteredAction
 error.centeredAC.required=An AC is required to centered the view.
