--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/log4j.properties
@@ -1,8 +1,8 @@
 log4j.rootCategory=WARN, A
 
 log4j.category.uk.ac.ebi.intact.application.hierarchview=WARN
-log4j.category.uk.ac.ebi.intact.application.hierarchview.business.data=INFO
-log4j.category.uk.ac.ebi.intact.application.hierarchview.struts.framework=INFO
+log4j.category.uk.ac.ebi.intact.application.hierarchview.struts=DEBUG
+log4j.category.uk.ac.ebi.intact.application.commons.struts.taglibs=DEBUG
 
 # intact-core
 log4j.category.uk.ac.ebi.intact=WARN
