--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/pom.xml
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/pom.xml
@@ -25,6 +25,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.0.20070429</version>
+        </dependency>
+        <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
             <version>1.7.1</version>
