Fixed transaction issues

--- a/repo/data-exchange/trunk/imex/intact-imex-import/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/imex/intact-imex-import/src/test/resources/log4j.properties
@@ -4,6 +4,7 @@ log4j.rootCategory=INFO, A
 log4j.category.uk.ac.ebi.intact=INFO
 log4j.category.uk.ac.ebi.intact.persistence=INFO
 log4j.category.uk.ac.ebi.intact.model=INFO
+log4j.category.uk.ac.ebi.intact.model.util.XrefUtils=ERROR
 log4j.category.uk.ac.ebi.intact.config=INFO
 log4j.category.uk.ac.ebi.intact.context=INFO
 log4j.category.uk.ac.ebi.intact.annotation=INFO
