Ensure that the converted experiment has participant detection methods by calculating the common det method from the componentns

--- a/repo/data-exchange/trunk/psimi/psixml/intact-psixml-converters/pom.xml
+++ b/repo/data-exchange/trunk/psimi/psixml/intact-psixml-converters/pom.xml
@@ -29,6 +29,11 @@
         </dependency>
 
         <dependency>
+            <groupId>uk.ac.ebi.intact.dataexchange</groupId>
+            <artifactId>intact-cvutils</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>uk.ac.ebi.intact.tools</groupId>
             <artifactId>intact-psi-validator</artifactId>
             <scope>test</scope>
