--- a/repo/bridges/trunk/coredep/pom.xml
+++ b/repo/bridges/trunk/coredep/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
-            <version>1.8.0-SNAPSHOT</version>
+            <version>1.8.0</version>
         </dependency>
      </dependencies>
 
