[IAV-19] Replace funny triangle symbol by tickbox and make highlighting cumulative
you can choose "CUMULATIVE" or "SELECTIVE" in the Highlight.propteries

--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Highlighting.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Highlighting.properties
@@ -38,14 +38,19 @@ highlightment.source.node.Role.class=uk.ac.ebi.intact.application.hierarchview.h
 highlightment.source.node.Role.label=Role
 highlightment.source.node.Role.applicationPath=http://www.ebi.ac.uk/ontology-lookup/
 
+#ExperimentalRole
+highlightment.source.node.Species.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.node.SpeciesHighlightmentSource
+highlightment.source.node.Species.label=Species
+highlightment.source.node.Species.applicationPath=http://www.ebi.ac.uk/ontology-lookup/
+
 # Confidence
 highlightment.source.edge.Confidence.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.edge.ConfidenceHighlightmentSource
 highlightment.source.edge.Confidence.label=Confidence
 
 #First Author
-highlightment.source.edge.PMID.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.edge.PMIDHighlightmentSource
-highlightment.source.edge.PMID.label=PMID
-highlightment.source.edge.PMID.applicationPath=http://www.ebi.ac.uk/citexplore/
+highlightment.source.edge.Publication.class=uk.ac.ebi.intact.application.hierarchview.highlightment.source.edge.PublicationHighlightmentSource
+highlightment.source.edge.Publication.label=Publication
+highlightment.source.edge.Publication.applicationPath=http://www.ebi.ac.uk/citexplore/
 
 
 
@@ -56,10 +61,10 @@ highlightment.source.edge.PMID.applicationPath=http://www.ebi.ac.uk/citexplore/
 #   'highlightment.source.allowed' list of sources (i.e. [NAME OF YOUR SOURCE]) separate by the specified token
 
 highlightment.source.node.token=,
-highlightment.source.node.allowed=GO,Interpro,Role,MoleculeType
+highlightment.source.node.allowed=GO,Interpro,Role,Species,MoleculeType
 
 highlightment.source.edge.token=,
-highlightment.source.edge.allowed=Confidence,PMID
+highlightment.source.edge.allowed=Confidence,Publication
 
 
 
@@ -90,6 +95,12 @@ highlightment.behaviour.Visible.class=uk.ac.ebi.intact.application.hierarchview.
 highlightment.behaviour.Visible.label=Visible
 
 
+# SOURCE'S BEHAVIOUR
+####################
+# You can specify if highlight should be "CUMULATIVE" or "SELECTIVE" :
+highlightment.option=CUMULATIVE
+
+
 # SOURCE BEHAVIOUR'S POLICY
 ###########################
 # You can specify for each sources what behaviour are usable, as follow :
@@ -100,6 +111,7 @@ highlightment.behaviour.Visible.label=Visible
 highlightment.behaviour.GO.allowed=Color,Visible
 highlightment.behaviour.Interpro.allowed=Color,Visible
 highlightment.behaviour.Role.allowed=Color,Visible
+highlightment.behaviour.Species.allowed=Color,Visible
 highlightment.behaviour.MoleculeType.allowed=Color,Visible
 highlightment.behaviour.Confidence.allowed=Color,Visible
-highlightment.behaviour.PMID.allowed=Color,Visible
+highlightment.behaviour.Publication.allowed=Color,Visible
