--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
@@ -12,4 +12,4 @@ search.parameter.class.value=
 # "webservice" to get data from BinaryWebService,
 # "database" to get data from DatabaseService
 # "local" to get data from LocalIndexDataService
-search.source.name=webservice
+search.source.name=local
