--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/log4j.properties
@@ -1,8 +1,6 @@
 log4j.rootCategory=WARN, A
 
 log4j.category.uk.ac.ebi.intact.application.hierarchview=WARN
-log4j.category.uk.ac.ebi.intact.application.hierarchview.struts=DEBUG
-log4j.category.uk.ac.ebi.intact.application.commons.struts.taglibs=DEBUG
 
 # intact-core
 log4j.category.uk.ac.ebi.intact=WARN
@@ -44,7 +42,7 @@ log4j.category.org.hibernate.SQL=INFO
 #Log all JDBC parameters
 log4j.category.org.hibernate.type=INFO
 #Log all SQL DDL statements as they are executed
-log4j.category.org.hibernate.tool.hbm2ddl=INFO
+log4j.category.org.hibernate.tool.hbm2ddl=WARN
 #Log the state of all entities (max 20 entities) associated with the session at flush time
 log4j.category.org.hibernate.pretty=DEBUG
 #Log all second-level cache activity
