--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/pom.xml
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>uk.ac.ebi.intact.service.hierarchview</groupId>
             <artifactId>intact-graph</artifactId>
-            <version>1.6.0-SNAPSHOT</version>
+            <!--<version>1.6.0-SNAPSHOT</version>-->
         </dependency>
         <dependency>
             <groupId>uk.ac.ebi.intact.service.commons</groupId>
