- Replaced error reporting mechanism by messages of different kinds

--- a/repo/data-exchange/trunk/imex/intact-imex-repository/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/imex/intact-imex-repository/src/test/resources/log4j.properties
@@ -4,6 +4,7 @@ log4j.rootCategory=INFO, A
 log4j.category.uk.ac.ebi.intact=INFO
 log4j.category.uk.ac.ebi.intact.persistence=INFO
 log4j.category.uk.ac.ebi.intact.model=INFO
+log4j.category.uk.ac.ebi.intact.model.util.XrefUtls=ERROR
 log4j.category.uk.ac.ebi.intact.config=INFO
 log4j.category.uk.ac.ebi.intact.context=INFO
 log4j.category.uk.ac.ebi.intact.annotation=INFO
@@ -14,6 +15,7 @@ log4j.category.uk.ac.ebi.intact.persister=INFO
 
 # other intact
 log4j.category.psidev.psi.mi=WARN
+log4j.category.psidev.psi.mi.dao=ERROR
 
 # this party from here
 log4j.category.uk.ac.ebi.ook=ERROR
