--- a/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/src/test/resources/log4j.properties
+++ b/repo/data-exchange/trunk/psimi/psimitab/intact-psimitab/src/test/resources/log4j.properties
@@ -1,9 +1,11 @@
-log4j.rootCategory=INFO, A
+log4j.rootCategory=WARN, A
 
 log4j.category.psidev.psi.mi.xml=ERROR
 log4j.category.psidev.psi.mi.tab=ERROR
-log4j.category.psidev.psi.mi.tab.client=INFO
+log4j.category.psidev.psi.mi.tab.client=ERROR
 log4j.category.psidev.psi.mi.tab.expansion=ERROR
+log4j.category.uk.ac.ebi.intact.psimitab.InterproNameHandler=INFO
+log4j.category.uk.ac.ebi.intact.psimitab.IntActColumnHandler=INFO
 
 
 # ***** A is set to be a ConsoleAppender.
